k8s-manifests/badstats.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: badstats
  namespace: badstats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: badstats
  template:
    metadata:
      labels:
        app: badstats
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: badstats
      containers:
        - name: badstats
          image: kpuc1997/badstats:1.1.3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "300Mi"
              cpu: "500m"
            requests:
              memory: "50Mi"
              cpu: "200m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/src/app/instance
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: badstats
  namespace: badstats
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: badstats
