k8s-manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badstats
  namespace: badstats
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - badstats.offtherailsradio.org
    secretName: badstats-tls
  rules:
  - host: badstats.offtherailsradio.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: badstats
            port:
              number: 8080
